--- a/index.html
+++ b/index.html
@@ -5,27 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DOM</title>
-    <script defer src="./assets/js/sandbox.js"></script>
-    <script defer src="./assets/js/Slider.js"></script>
+    <link rel="stylesheet" href="./assets/styles/style.css">
+    <link rel="stylesheet" href="./assets/styles/form.css">
+    <!-- <script defer src="./assets/js/data.js"></script>
+    <script defer src="./assets/js/utils.js"></script>
+    <script defer src="./assets/js/createCard.js"></script> -->
     <script defer src="./index.js"></script>
-    <style>
-      .slider-container {
-        display: flex;
-        justify-content: center;
-        max-height: 80vmin;
-      }
-      .slider-container img{
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-      }
-    </style>
   </head>
   <body>
-    <section class="slider-container">
-        <button>prev</button>
-        <div class="slide"><img src="" alt=""  /></div>
-        <button>next</button>
-    </section>
+    <form action="" id="form" class="form">
+      <input type="text" name="text" />
+      <input type="submit" value="submit" />
+      <input type="reset" value="reset">
+    </form>
   </body>
 </html>
